# sidmonitor

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  README.md  composer.json  docker-compose.dev.yml  docker-compose.preview.yml  docker-compose.production.yml  docker-compose.yml  kubernetes-project-debug.json  kubernetes-project-monitoring-by-projects-fixed.json  kubernetes-project-monitoring-by-projects.json  kubernetes-project-monitoring-comprehensive.json  kubernetes-project-monitoring-working.json  kubernetes-project-simple-working.json  kubernetes-test-simple.json
.sidstack/: config.json
backend/: .env.example  Dockerfile  mcp_config.json  mcp_server.py  pyproject.toml  requirements-mcp.txt  requirements.txt  run.py
backend/alembic/versions/: 002_api_key_expiration_audit_log.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  feedback.py  frontend_logs.py  health.py  inbound.py  ingest.py  jobs_query.py  logs.py  organizations.py  outbound.py  projects.py  saved_views.py  settings.py  stats.py
backend/app/api/stats/: __init__.py  dashboard.py  endpoint_detail.py  errors.py  performance.py  traffic.py  users.py
backend/app/models/: audit.py  auth.py  database.py  feedback.py  frontend_logs.py  health.py  inbound.py  ingest.py  jobs.py  log.py  organization.py  outbound.py  project.py  saved_view.py  stats.py
backend/app/services/: api_keys.py  audit_service.py  auth.py  clickhouse.py  ingest_service.py  organizations.py  projects.py  query_builder.py
config/: observatory.php
(+190 files in other folders)
